--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -1,4 +1,11 @@
 <div class="container">
+  <div class="bg-surface text-on-surface p-4">
+    <h1 class="text-primary">Hello, Material Design with Tailwind!</h1>
+  </div>
+  <h1 class="">Large Display Text</h1>
+<h2 class="text-headline-medium text-secondary">Medium Headline</h2>
+<p class="text-body-large text-on-surface">This is body text in a large size.</p>
+<button class="text-label-medium text-on-primary bg-primary">Click Me</button>
   <section>
     <div class="example-label">Basic</div>
     <div class="example-button-row">
