--- a/src/app/_pages/portfolios/portfolios.component.html
+++ b/src/app/_pages/portfolios/portfolios.component.html
@@ -1,1 +1,31 @@
-<p>portfolios works!</p>
+<h1>Portfolios</h1>
+<h1>This is an H1 Heading</h1>
+<h2>This is an H2 Heading</h2>
+<h3>This is an H3 Heading</h3>
+<h4>This is an H4 Heading</h4>
+<h5>This is an H5 Heading</h5>
+<h6>This is an H6 Heading</h6>
+<p>This is a paragraph of text styled as body-large.</p>
+
+<h2 class="pt-2 mb-2 text-lg">Text Sizes</h2>
+
+<p class="text-[2px]">The quick brown fox jumps over the lazy dog.</p>
+<p class="text-sm">The quick brown fox jumps over the lazy dog.</p>
+<p class="text-base">The quick brown fox jumps over the lazy dog.</p>
+<p class="text-lg">The quick brown fox jumps over the lazy dog.</p>
+<p class="text-xl">The quick brown fox jumps over the lazy dog.</p>
+<p class="text-2xl">The quick brown fox jumps over the lazy dog.</p>
+
+<h2 class="pt-4 mb-2 text-display-large">Custom Material Typography</h2>
+<p class="text-display-large bg-primary">This is display large from Material typography.</p>
+<p class="text-display-medium">This is display medium from Material typography.</p>
+<p class="text-display-small">This is display small from Material typography.</p>
+
+
+<h2 class="pt-2 mb-2">Font Weights</h2>
+
+<p class="font-light ">The quick brown fox ...</p>
+<p class="font-normal ">The quick brown fox ...</p>
+<p class="font-medium ">The quick brown fox ...</p>
+<p class="font-semibold ">The quick brown fox ...</p>
+<p class="font-bold ">The quick brown fox ...</p>
