--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <h1 class="page-header">My Custom Header</h1>
+  <p class="text-body-medium text-secondary">Some content text using utility classes directly.</p>
+
   <div>
   <h1>Angular Material 3 Theming System: Complete Guide</h1>
 
@@ -237,8 +240,8 @@
         <div class="bg-red-100 p-4 relative">
           <span class="absolute top-0 left-0 bg-red-500 text-white text-xs px-2 py-1">Spacing classes</span>
           <div class="space-y-4">
-            <div class="bg-red-200 p-2">m-4 (Margin)</div>
-            <div class="bg-red-200 p-2">p-4 (Padding)</div>
+            <div class="bg-primary p-2">m-4 (Margin)</div>
+            <div class="bg-primary p-2">p-4 (Padding)</div>
           </div>
         </div>
       </section>
