--- a/src/@breaker/components/app-toolbar/app-toolbar.component.html
+++ b/src/@breaker/components/app-toolbar/app-toolbar.component.html
@@ -25,7 +25,7 @@
     } }
   </nav>
 
-  <span class="spacer"></span>
+  <span class="flex-1"></span>
   <!-- Theme Toggler -->
   <button
     mat-icon-button
