--- a/src/@breaker/components/app-toolbar/app-toolbar.component.html
+++ b/src/@breaker/components/app-toolbar/app-toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="toolbar">
+<mat-toolbar class="toolbar custom-theme">
   <span class="logo" routerLink="/">APPNAME</span>
   <mat-icon class="app-icon">bolt</mat-icon>
 
