--- a/src/@breaker/components/app-toolbar/app-toolbar.component.html
+++ b/src/@breaker/components/app-toolbar/app-toolbar.component.html
@@ -1,22 +1,33 @@
-<mat-toolbar class="toolbar custom-theme">
-  <span class="logo" routerLink="/">APPNAME</span>
-  <mat-icon class="app-icon">bolt</mat-icon>
+<mat-toolbar class="toolbar flex justify-between items-center p-4">
+  <!-- Logo -->
+  <div class="flex items-center justify-start ">
+    <span class="text-xl font-bold" routerLink="/">APPNAME</span>
+    <mat-icon class="text-2xl ml-2">bolt</mat-icon>
+  </div>
+    <!-- Logo -->
+    <!-- <div class="flex items-center justify-start sm:order-2 md:mr-10 lg:hidden">
+      <a class="flex items-center justify-center rounded bg-primary p-2 focus:outline-none focus:ring-1">
+        <mat-icon class="text-2xl ml-2">bolt</mat-icon>
+      </a>
+      <b class="hidden pl-3 text-sm font-bold text-foreground sm:block"> Angular Tailwind </b>
+    </div> -->
 
-  <nav class="menu ">
+  <!-- Menu Items -->
+  <nav class="flex space-x-1">
     @for (item of menuItems; track item) { @if (!item.subItems) {
-    <a mat-button [routerLink]="[item.route]">
+    <a mat-button [routerLink]="[item.route]" >
       <mat-icon>{{ item.icon }}</mat-icon>
       {{ item.label }}
     </a>
     } @else {
-    <button mat-button [matMenuTriggerFor]="menu">
+    <button mat-button [matMenuTriggerFor]="menu" >
       <mat-icon>{{ item.icon }}</mat-icon>
       {{ item.label }}
       <mat-icon>arrow_drop_down</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
       @for (subItem of item.subItems; track subItem) {
-      <a mat-menu-item [routerLink]="[item.route, subItem.route]">
+      <a mat-menu-item [routerLink]="[item.route, subItem.route]" >
         <mat-icon>{{ subItem.icon }}</mat-icon>
         {{ subItem.label }}
       </a>
@@ -45,7 +56,7 @@
     <button mat-menu-item (click)="changeTheme('dark')">Dark</button>
   </mat-menu>
   <!-- Profile Button -->
-  <button mat-icon-button [matMenuTriggerFor]="profileMenu">
+  <button mat-icon-button [matMenuTriggerFor]="profileMenu" class="text-on-primary">
     <mat-icon>account_circle</mat-icon>
   </button>
   <mat-menu #profileMenu="matMenu">
