--- a/src/@breaker/components/app-toolbar/_toolbar-theme.scss
+++ b/src/@breaker/components/app-toolbar/_toolbar-theme.scss
@@ -14,12 +14,23 @@
   @include density($theme);
   @include typography($theme);
 }
+// @use '@angular/material' as mat;
 
+// .my-class-with-default-shadow {
+//   // Adds a shadow for elevation level 2 with default color and full opacity:
+//   @include mat.elevation(2);
+// }
+
+// .my-class-with-custom-shadow {
+//   // Adds a shadow for elevation level 2 with color #e91e63 and 80% of the default opacity:
+//   @include mat.elevation(2, #e91e63, 0.8);
+// }
 @mixin color($theme) {
   .toolbar {
     color: mat.get-theme-color($theme, on-primary-container);
     background: mat.get-theme-color($theme, primary-container);
     border-color: mat.get-theme-color($theme, primary);
+    @include mat.elevation(2, #e91e63, 0.8);
 
     // .mat-icon {
     //   color: mat.get-theme-color($theme, on-primary-container);
