--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -761,7 +761,7 @@
       </section>
 
       <!-- Bottom Sheet -->
-      <button mat-raised-button (click)="openBottomSheet()" class="bg-tertiary-40 hover:bg-tertiary-30 text-tertiary-100">
+      <button mat-raised-button (click)="openBottomSheet()" class="bg-tertiary hover:bg-tertiary-30 text-tertiary-100">
         Open Bottom Sheet
       </button>
     </section>
