--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -1,3 +1,4 @@
+<app-containers></app-containers>
 <div class="container">
   <h1 class="page-header">My Custom Header</h1>
   <p class="text-body-medium text-secondary">Some content text using utility classes directly.</p>
@@ -761,7 +762,7 @@
       </section>
 
       <!-- Bottom Sheet -->
-      <button mat-raised-button (click)="openBottomSheet()" class="bg-tertiary hover:bg-tertiary-30 text-tertiary-100">
+      <button mat-raised-button (click)="openBottomSheet()" class="bg-tertiary-40 hover:bg-tertiary-30 text-tertiary-100">
         Open Bottom Sheet
       </button>
     </section>
