--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -20,7 +20,7 @@
 } -->
 
 <!-- sidenav.component.html -->
-<div class="sidenav-content bg-purple-200">
+<div class="sidenav-content">
   <div class="sidenav-toggle-button">
     <button mat-icon-button (click)="toggleCollapsed()">
       <mat-icon>
