--- a/src/@breaker/components/containers/containers.component.html
+++ b/src/@breaker/components/containers/containers.component.html
@@ -87,7 +87,7 @@
 <h2 class="text-2xl font-semibold mb-4">Responsive Flexbox Card Layout</h2>
 <div class="flex flex-wrap -mx-2 p-4 relative bg-surface dark:bg-surface-dim">
 <span class="absolute top-0 left-0 bg-green-500 text-white text-xs px-2 py-1">flex flex-wrap -mx-2</span>
-<div *ngfor="let i of [1,2,3,4]" class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 px-2 mb-4">
+<div *ngFor="let i of [1,2,3,4]" class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 px-2 mb-4">
 <div class="p-4 h-full rounded shadow bg-surface-container-low text-on-surface">
 <span class="block mb-2 text-sm font-semibold">w-full sm:w-1/2 md:w-1/3 lg:w-1/4</span>
           Card {{i}}
