--- a/src/@breaker/components/app-toolbar/app-toolbar.component.html
+++ b/src/@breaker/components/app-toolbar/app-toolbar.component.html
@@ -7,7 +7,7 @@
 
   <!-- Menu Items -->
   <nav class="flex space-x-1">
-    @for (item of topNavItems$ | async; track item.id) {
+    @for (item of topNavItems; track item.id) {
       @if (!hasTopChildren(item)) {
         <a mat-button [routerLink]="[item.path]">
           <mat-icon>{{ item.icon }}</mat-icon>
