--- a/src/app/_layouts/main-app-layout/main-app-layout.component.html
+++ b/src/app/_layouts/main-app-layout/main-app-layout.component.html
@@ -1,7 +1,7 @@
 <app-toolbar></app-toolbar>
 
 <mat-sidenav-container>
-  @if (hasSideNavItems()) {
+  @if (showSidenav()) {
     <mat-sidenav
       [opened]="true"
       mode="side"
@@ -9,14 +9,14 @@
     >
     <app-sidenav
     [collapsed]="collapsed()"
-    (collapsedChange)="onCollapsedChange($event)"
+    (collapsedChange)="toggleCollapsed()"
   />
     </mat-sidenav>
   }
 
   <mat-sidenav-content
     class="p-5 transition-[margin-left] duration-500"
-    [style.marginLeft]="contentMargin()"
+    [style.marginLeft]="sidenavWidth()"
   >
     @if (loading()) {
       <div class="flex justify-center items-center h-full">
