cleaned up some still working on small stuff

--- a/src/app/_layouts/main-app-layout/main-app-layout.component.scss
+++ b/src/app/_layouts/main-app-layout/main-app-layout.component.scss
@@ -1,18 +1,18 @@
-mat-toolbar {
-  position: relative;
-  z-index: 5;
-}
+// mat-toolbar {
+//   position: relative;
+//   z-index: 5;
+// }
 // .content {
 //   padding: 20px;
 //   transition: margin-left 0.5s;
 // }
-mat-sidenav-container {
-  height: calc(100vh - 64px);
-}
-mat-sidenav,
-mat-sidenav-content {
-  transition: all 500ms ease-in-out;
-}
+// mat-sidenav-container {
+//   height: calc(100vh - 64px);
+// }
+// mat-sidenav,
+// mat-sidenav-content {
+//   transition: all 500ms ease-in-out;
+// }
 // .spacer {
 //   flex: 1 1 auto;
 // }
