--- a/src/@breaker/components/app-toolbar/app-toolbar.component.html
+++ b/src/@breaker/components/app-toolbar/app-toolbar.component.html
@@ -7,26 +7,24 @@
 
   <!-- Menu Items -->
   <nav class="flex space-x-1">
-    @for (item of topNavItems; track item.id) {
-      @if (!hasTopChildren(item)) {
-        <a mat-button [routerLink]="[item.path]">
-          <mat-icon>{{ item.icon }}</mat-icon>
-          {{ item.label }}
-        </a>
+    @for (item of horizontalNavItems(); track item.id) {
+      @if (!item.dropdownItems?.length) {
+        <button mat-button [routerLink]="[item.path]">
+          <mat-icon>{{item.icon}}</mat-icon>
+          {{item.label}}
+        </button>
       } @else {
         <button mat-button [matMenuTriggerFor]="menu">
-          <mat-icon>{{ item.icon }}</mat-icon>
-          {{ item.label }}
+          <mat-icon>{{item.icon}}</mat-icon>
+          {{item.label}}
           <mat-icon>arrow_drop_down</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-          @for (child of item.children; track child.id) {
-            @if (child.location.includes('top')) {
-              <a mat-menu-item [routerLink]="[child.path]">
-                <mat-icon>{{ child.icon }}</mat-icon>
-                {{ child.label }}
-              </a>
-            }
+          @for (child of item.dropdownItems; track child.id) {
+            <button mat-menu-item [routerLink]="[child.path]">
+              <mat-icon>{{child.icon}}</mat-icon>
+              {{child.label}}
+            </button>
           }
         </mat-menu>
       }
