--- a/src/app/_pages/test/test.component.html
+++ b/src/app/_pages/test/test.component.html
@@ -1,4 +1,4 @@
-<!-- <p>test works!</p>
+<p>test works!</p>
 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 p-4">
   <app-custom-card
     title="Material 3 Card"
@@ -14,7 +14,7 @@
       </span>
     </div>
   </app-custom-card>
-</div> -->
+</div>
 
 <!-- <app-dialog></app-dialog>
 
