added table but issues with tailwind

--- a/src/app/_pages/admin/user-management/user-management.component.html
+++ b/src/app/_pages/admin/user-management/user-management.component.html
@@ -1,1 +1,7 @@
-<p>user-management works!</p>
+
+  <h1>User Management</h1>
+  <app-dynamic-table [tableConfig]="userTableConfig"></app-dynamic-table>
+
+  <h1 class="text-3xl font-bold underline">
+    Hello world!
+  </h1>
