added table fixed tailwind issues

--- a/src/@breaker/components/dynamic-table/dynamic-table.component.html
+++ b/src/@breaker/components/dynamic-table/dynamic-table.component.html
@@ -2,7 +2,7 @@
   <!-- Toolbar -->
   <app-table-toolbar
     *ngIf="tableConfig.toolbar"
-    [toolbarConfig]="tableConfig.toolbar ?? { actions: [] }"
+    [toolbarConfig]="tableConfig.toolbar"
     (search)="applySearch($event)"
     (clearFilters)="clearFilters()">
   </app-table-toolbar>
