--- a/src/@breaker/components/dynamic-table/dynamic-table.component.html
+++ b/src/@breaker/components/dynamic-table/dynamic-table.component.html
@@ -15,11 +15,30 @@
       <mat-cell *matCellDef="let element">{{ element[column.key] }}</mat-cell>
     </ng-container>
 
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions" *ngIf="tableConfig.actions?.length">
+      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <button
+          *ngFor="let action of tableConfig.actions"
+          mat-icon-button
+          [matTooltip]="action.tooltip"
+          (click)="action.callback(row)">
+          <mat-icon>{{ action.icon }}</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+
     <!-- Table header and rows -->
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
   <!-- Pagination -->
-  <mat-paginator [length]="totalItems" [pageSize]="tableConfig.pageSize"></mat-paginator>
+  <mat-paginator
+    [length]="totalItems"
+    [pageSize]="tableConfig.pageSize"
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons>
+  </mat-paginator>
 </div>
