--- a/src/styles.scss
+++ b/src/styles.scss
@@ -240,11 +240,11 @@ body {
 // }
 
 
-// //Material Tailwind Fixes
-// .mdc-notched-outline__notch {
-//   border-style: none;
-// }
+//Material Tailwind Fixes
+.mdc-notched-outline__notch {
+  border-style: none;
+}
 
-// .mat-mdc-icon-button {
-//   line-height: normal;
-// }
+.mat-mdc-icon-button {
+  line-height: normal;
+}
