playing with table and dialogs

--- a/src/app/_pages/admin/user-management/user-management.component.html
+++ b/src/app/_pages/admin/user-management/user-management.component.html
@@ -1,3 +1,7 @@
+<breaker-toolbar
+  [config]="toolbarConfig"
+  (actionClick)="handleToolbarAction($event)">
+</breaker-toolbar>
 <breaker-grid
   [dataSource]="users"
   [allowPaging]="true"
