changed name of config and scs stuff

--- a/src/@breaker/components/breaker-grid/breaker-grid.component.scss
+++ b/src/@breaker/components/breaker-grid/breaker-grid.component.scss
@@ -1,25 +1,25 @@
-.breaker-grid {
-  .grid-toolbar {
-    margin-bottom: 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+// .breaker-grid {
+//   .grid-toolbar {
+//     margin-bottom: 16px;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//   }
 
-  mat-table {
-    width: 100%;
-    margin-top: 16px;
-  }
+//   mat-table {
+//     width: 100%;
+//     margin-top: 16px;
+//   }
 
-  mat-header-cell, mat-cell {
-    padding: 8px 16px;
-  }
+//   mat-header-cell, mat-cell {
+//     padding: 8px 16px;
+//   }
 
-  mat-header-cell {
-    font-weight: bold;
-  }
+//   mat-header-cell {
+//     font-weight: bold;
+//   }
 
-  mat-cell {
-    font-size: 14px;
-  }
-}
+//   mat-cell {
+//     font-size: 14px;
+//   }
+// }
