--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -1,3 +1,9 @@
+<div class="site-button">
+  <button mat-button>Basic</button>
+  <button mat-raised-button>Raised</button>
+  <button mat-stroked-button>Stroked</button>
+  <button mat-flat-button>Flat</button>
+</div>
 <app-containers></app-containers>
 <div class="container">
   <h1 class="page-header">My Custom Header</h1>
@@ -63,7 +69,7 @@
     <button mat-flat-button class="button-rounded">Flat</button>
   </div>
 
-  <div class="demo-buttons overrides-example">
+  <div class=" overrides-example">
     <h3>Overrides Example</h3>
     <button mat-button class="button-rounded">Basic</button>
     <button mat-raised-button class="button-rounded">Raised</button>
